fixed overflow problem

--- a/src/component/Projects/Cards/Cards.css
+++ b/src/component/Projects/Cards/Cards.css
@@ -1,10 +1,13 @@
 .projectCards {
     width: 80vw;
     display: grid;
-    min-height: 50vh;
-    max-height: 60vh;
+    max-height: 48vh;
+    min-height: 48vh;
     grid-template-columns: 3fr 3fr 2fr;
     column-gap: 2%;
+    overflow-x: hidden;
+    overflow-y: scroll;
+    scrollbar-color: rgba(30, 4, 31, 0.5) transparent;
     color: white;
     font-family: 'Barlow Condensed', sans-serif;
     transition: all 0.5s ease-in;
@@ -53,7 +56,6 @@
     position: relative;
 }
 
-
 @keyframes Mart {
     from{
       transform: rotate(90deg)
@@ -61,3 +63,5 @@
     to {transform: rotate(0deg)
     }
   }	
+
+  
